# eurofarma-chatgpt-project

./: .env-example  README  README.md  docker-compose.yaml  pyproject.toml
api/: .env-example  pyproject.toml
api/app/: main.py
api/app/chatgpt/: get_client.py
api/app/routers/: archive.py
api/app/schemas/: archive.py
api/app/schemas/archive/: archiveResponseSchema.py
api/chatgpt/: prompts.py
api/schemas/archive/: archiveMetadataResponseSchema.py  archiveRequestCreateSchema.py
backend/: .env-example  Dockerfile  pyproject.toml
backend/chatgpt/: prompts.py
backend/models/: archive.py
backend/routers/: archive.py
database/: docker-compose.yaml  init_database.sql
frontend/: Dockerfile  main.py  pyproject.toml
frontend/services/: transformations.py
src/app/: database.py  main.py
src/app/models/: archive.py  archivesBase.py
src/app/routers/: archive.py
src/app/schemas/: archive.py
