[tool.poetry]
name = "eurofarma-3sit"
version = "0.1.0"
description = ""
authors = ["EDUARDO LIMA <weduardow123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
streamlit = "^1.37.1"
python-dotenv = "^1.0.1"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
app = "fastapi dev src/app/main.py"
