[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["EDUARDO LIMA <weduardow123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
openai = "^1.50.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
