[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["EDUARDO LIMA <weduardow123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
